vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__package__tests__package_body_declaration_with_function.snap
---
source: vhdl_syntax/src/parser/productions/package.rs
expression: "to_test_text(Parser::package_body,\n\"\\\npackage body pkg_name is\n    procedure foo is\n    begin\n    end foo;\nend package body;\")"
---
PackageBody
  PackageBodyPreamble
    Keyword(Package)
    Keyword(Body)
    Identifier 'pkg_name'
    Keyword(Is)
  PackageBodyDeclarativePart
    SubprogramBody
      SubprogramBodyPreamble
        ProcedureSpecification
          Keyword(Procedure)
          Identifier 'foo'
        Keyword(Is)
      DeclarationStatementSeparator
        Keyword(Begin)
      SubprogramBodyEpilogue
        Keyword(End)
        Identifier 'foo'
        SemiColon
  PackageBodyEpilogue
    Keyword(End)
    EndPackageBody
      Keyword(Package)
      Keyword(Body)
    SemiColon
