vhdl_syntax/src/parser/productions/snapshots/vhdl_syntax__parser__productions__package__tests__package_declaration_with_declarations.snap
---
source: vhdl_syntax/src/parser/productions/package.rs
expression: "to_test_text(Parser::package,\n\"\\\npackage pkg_name is\n  type foo;\n  constant bar : natural := 0;\nend package;\")"
---
PackageDeclaration
  PackagePreamble
    Keyword(Package)
    Identifier 'pkg_name'
    Keyword(Is)
  PackageDeclarativePart
    IncompleteTypeDeclaration
      Keyword(Type)
      Identifier 'foo'
      SemiColon
    ConstantDeclaration
      Keyword(Constant)
      IdentifierList
        Identifier 'bar'
      Colon
      SubtypeIndication
        Name
          NameDesignatorPrefix
            Identifier 'natural'
      InitialValue
        ColonEq
        LiteralExpression
          AbstractLiteral '0'
      SemiColon
  PackageEpilogue
    Keyword(End)
    Keyword(Package)
    SemiColon
